--- a/package.xml
+++ b/package.xml
@@ -6,8 +6,7 @@
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="pi@todo.todo">pi</maintainer>
+  <maintainer email="mferraz@alunos.utfpr.edu.br">pi</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -38,6 +37,7 @@
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
      <build_depend>message_generation</build_depend> 
+     <build_depend>lepton_msgs</build_depend> 
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
   <!--   <build_export_depend>message_generation</build_export_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
@@ -52,17 +52,15 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-<!--  <build_depend>OpenCV</build_depend>      -->
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-<!--  <build_export_depend>OpenCV</build_export_depend>     -->
 
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-<!--  <exec_depend>OpenCV</exec_depend>   -->
+  <exec_depend>lepton_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
