--- a/package.xml
+++ b/package.xml
@@ -36,8 +36,7 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
-     <build_depend>message_generation</build_depend> 
-     <build_depend>lepton_msgs</build_depend> 
+  <!--   <build_depend>message_generation</build_depend> -->
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
   <!--   <build_export_depend>message_generation</build_export_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
@@ -60,7 +59,6 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>lepton_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
