--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lepton</name>
+  <name>lepton_thermal</name>
   <version>0.0.0</version>
   <description>The lepton package</description>
 
